--- a/index.css
+++ b/index.css
@@ -80,3 +80,7 @@ footer {
     bottom: 0; /* Add this to position it at the bottom */
     width: 100%; /* Add this to span the full width */
 }
+.total{
+    display:flex;
+   /*trying to set the total at the bottom*/
+}
